<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:text="@string/app_title"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:text="@string/app_subtitle"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:text="@string/layout_title"
            android:textStyle="bold"
            android:background="@color/grey"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Wähle eines der folgenden Layouts für ein Demo:"/>
        
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:paddingBottom="20sp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LinearLayout"
                android:id="@+id/radioButton"
                android:onClick="onClickLinearLayoutRadio"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RelativeLayout"
                android:id="@+id/radioButton2"
                android:onClick="onClickRelativeLayoutRadio"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:text="@string/oriented_title"
            android:textStyle="bold"
            android:background="@color/grey"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oriented_text"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:text="@string/views_title"
            android:textStyle="bold"
            android:background="@color/grey"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_marginBottom="10sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/show_me"
            android:onClick="onClickViewsButton"/>


    </LinearLayout>
</ScrollView>